--- a/didattica.html
+++ b/didattica.html
@@ -297,8 +297,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic,900italic,100,200,300,400,500,600,700,800,900" media="all">
 
 
-    <link rel="stylesheet" type="text/css" href="/static/2020/img/FILEdiARUBA/css/demo.css">
-    <link rel="stylesheet" type="text/css" href="/static/2020/img/FILEdiARUBA/css/style.css">
+    <!-- scripts -->
+    <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/particles.js"></script>
+    <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/demo/js/app.js"></script>
+  <!--scripts particles-->
 
 
     <!--FINE-->
@@ -1876,7 +1878,7 @@
                   <!--  <a href="https://www.facebook.com/maurizio.minieri"><i class="fa fa-facebook fa-3x fa-fw"></i></a>
                    <a href="https://www.instagram.com/doppia3mme/"><i class="fa fa-instagram fa-3x fa-fw"></i></a>-->
                     <a target="_blank" href="https://www.linkedin.com/in/maurizio-minieri-0b4992174/"><i class="fa fa-linkedin fa-3x fa-fw"></i></a>
-                    <a target="_blank" href='https://github.com/DOPPIA3MME'><i class="fa fa-github fa-3x fa-fw"></i></a>
+                    <a target="_blank" href='https://github.com/mauriziominieri'><i class="fa fa-github fa-3x fa-fw"></i></a>
                     <!--<a href="#references"><i class="fa fa-envelope fa-3x" id="mail" data-toggle="modal" data-target="#exampleModal"></i>-->
                     <text class="hover-tooltip">
                     <a id="mail" onclick="copy(this)" class="toggle-tt" data-placement="right"><i class="fa fa-envelope fa-3x" data-toggle="modal" data-target="#exampleModal"></i></a>
