--- a/didattica.html
+++ b/didattica.html
@@ -87,7 +87,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
     <!-- CSS index -->
-    <link rel="stylesheet" type="text/css" href="/static/2020/img/FILEdiARUBA/css/index.css?ts=<?=time()?>&quot">
+    <link rel="stylesheet" type="text/css" href="http://mauriziominieri.it/static/2020/img/FILEdiARUBA/css/index.css?ts=<?=time()?>&quot">
 
     <!-- CSS animation -->
   <link rel="stylesheet" href="/static/2020/img/FILEdiARUBA/css/animation.css">
