--- a/didattica-new.html
+++ b/didattica-new.html
@@ -1735,7 +1735,27 @@ aria-label="See more Digital Wellbeing features:"      data-g-config="{'eventLab
 
       <section id="q-menu-offering" class="feature-list-default grid">
       <h2 class="feature-list-default__heading is-2">Progetti finali</h2>
-      <p class="feature-list-default__copy is-copy-m">Android has new features across everything from your camera to your settings. There’s something for you.</p>
+      <p class="feature-list-default__copy is-copy-m">L'obiettivo finale sarà quello di far creare agli studenti questo progetto, un software di calcolo.
+
+Si tratta di un programma molto utile per calcolare le soluzioni di equazioni di primo e secondo grado & calcolare i valori ignoti di alcune figure geometriche: triangolo, quadrato e cerchio, semplicemente inserendo quelli noti.
+
+Cliccando su "Scaricalo" sarà possibile far partire il file .exe del programma, cioè il file eseguibile, che quindi si potrà testare in tutta la sua completezza ed efficienza.</p>
+
+<a id="finalp-a" class="hvr-icon-down" href="https://github.com/mauriziominieri/mauriziominieri.github.io/releases/download/1.0/FTP.exe" data-wpel-link="internal" target="_blank">
+<i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 30px; "></i>Scaricalo</a>
+
+<a  style=" font-size: 2px; " class="hvr-icon-forward" href="http://mauriziominieri.it/static/2020/projects/FTP.c" data-wpel-link="internal" target="_blank">
+<i class="fa fa-chevron-circle-right hvr-icon" style=" font-size: 10px; "></i></a>
+
+<div class="vc_empty_space" style="height: 30px"><span class="vc_empty_space_inner"></span></div>
+<p id="infolavoro" >IDE utilizzato:<img src="/static/2020/img/icons/icon-codeblock.png" data-toggle="tooltip" data-placement="right" title="CodeBlocks"><br>
+Linguaggio: <img src="/static/2020/img/icons/icon-c.png" data-toggle="tooltip" data-placement="right" title="C"></p>
+
+<br>momentaneo<br>
+ <a id="finalp-a" class="hvr-icon-down" href="http://mauriziominieri.it/static/2020/projects/webWork.rar" data-wpel-link="internal" target="_blank">
+<i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 30px; "></i>Scarica webWork (html)</a>
+
+
       <div class="feature-list-default__component-wrapper">
               <div class="accordion accordion--is-2"
        role="tablist"
@@ -1758,7 +1778,7 @@ aria-label="See more Digital Wellbeing features:"      data-g-config="{'eventLab
 
         >
 
-          <h3>Accessibility</h3><svg class="icon--svg accordion__item-toggle" aria-hidden="true">
+          <h3>Plinio Seniore</h3><svg class="icon--svg accordion__item-toggle" aria-hidden="true">
     <use xlink:href="#ico-arrow-round"></use>
   </svg></button>
     </div>
@@ -1787,7 +1807,7 @@ aria-label="See more Digital Wellbeing features:"      data-g-config="{'eventLab
 
         >
 
-          <h3>Camera</h3><svg class="icon--svg accordion__item-toggle" aria-hidden="true">
+          <h3>Tito Livio</h3><svg class="icon--svg accordion__item-toggle" aria-hidden="true">
     <use xlink:href="#ico-arrow-round"></use>
   </svg></button>
     </div>
