didattica links fixed

--- a/didattica.html
+++ b/didattica.html
@@ -802,7 +802,7 @@
 
     <p style="margin-top:3%;">
     <a class="test-start" style="font-size:25px;"
-    href="download/PlinioArgomentiTrattati.pdf" target="_blank"> Argomenti trattati</a>   </p>
+    href="static/2020/software/PlinioArgomentiTrattati.pdf" target="_blank"> Argomenti trattati</a>   </p>
      <p>
      <a class="test-start" style="font-size:25px;"
     href="/static/2020/certificati/didattica/Plinio.pub" target="_blank" onclick="javascript:return validatePass()"> Diploma </a>  &nbsp;&nbsp;
@@ -1352,7 +1352,7 @@
     <p class="down-descrizione">Scratch è un software molto intuitivo. Perfetto per allenarsi con la programmazione.</p>
     <a id="down-a" class="hvr-icon-forward" href="https://scratch.mit.edu/projects/editor/?tutorial=getStarted" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style=" font-size: 20px; "></i>Inizia online</a>
-    <a id="down-a" class="hvr-icon-down" href="https://github.com/mauriziominieri/mauriziominieri.github.io/releases/download/1.0/Scratch Desktop Setup 3.1.2.1.exe" target="_blank">
+    <a id="down-a" class="hvr-icon-down" href="https://github.com/mauriziominieri/mauriziominieri.github.io/releases/download/1.0/Scratch.Desktop.Setup.3.1.2.1.exe" target="_blank">
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 20px; "></i>Scaricalo</a>
 
 
