--- a/didattica.html
+++ b/didattica.html
@@ -404,8 +404,8 @@
 
 
 
-    <div id="particles-js_didattica">
-        <p id="myname" >Maurizio Minieri1</p>
+    <div id="particles-js">
+        <p id="myname" >Maurizio Minieri</p>
         <p id="student" class="cssanimation danceMiddle">Dottore in Informatica</p><br>
         <p  id="university" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
     </div>
