--- a/didattica.html
+++ b/didattica.html
@@ -414,9 +414,9 @@
     </header>
 
 
-
+<!--
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="/static/2020/img/FILEdiARUBA/particles.js"></script>
+    <script src="/static/2020/img/FILEdiARUBA/particles.js"></script>-->
 
     <!--FINE NAVBAR-->
 
@@ -1890,6 +1890,9 @@
           </div>
         </div>
   <!--FINE FOOTER-->
+
+
+
 
   <!--MAIL-->
   <script>
