--- a/didattica.html
+++ b/didattica.html
@@ -405,7 +405,7 @@
 
 
     <div id="particles-js">
-        <p id="myname" >Maurizio Minieri2</p>
+        <p id="myname" >Maurizio Minieri3</p>
         <p id="student" class="cssanimation danceMiddle">Dottore in Informatica</p><br>
         <p  id="university" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
     </div>
@@ -415,8 +415,8 @@
 
 
 
-  <!--  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>-->
-    <script src="/static/2020/img/FILEdiARUBA/particles.js"></script>
+   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <!--<script src="/static/2020/img/FILEdiARUBA/particles.js"></script>-->
 
     <!--FINE NAVBAR-->
 
