--- a/didattica.html
+++ b/didattica.html
@@ -297,14 +297,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic,900italic,100,200,300,400,500,600,700,800,900" media="all">
 
 
-    <!-- scripts -->
+    <!-- scripts --><!--
     <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/particles.js"></script>
-    <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/demo/js/app.js"></script>
+    <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/demo/js/app.js"></script>-->
   <!--scripts particles-->
 
 
     <!--FINE-->
-
 
     </head>
     <body>
@@ -405,7 +404,7 @@
 
 
     <div id="particles-js">
-        <p id="myname" >Maurizio Minieri3</p>
+        <p id="myname" >Maurizio Minieri5</p>
         <p id="student" class="cssanimation danceMiddle">Dottore in Informatica</p><br>
         <p  id="university" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
     </div>
@@ -416,7 +415,7 @@
 
 
    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <!--<script src="/static/2020/img/FILEdiARUBA/particles.js"></script>-->
+   <script src="/static/2020/img/FILEdiARUBA/particles.js"></script>
 
     <!--FINE NAVBAR-->
 
