--- a/didattica.html
+++ b/didattica.html
@@ -398,7 +398,7 @@
 
 
     <div id="particles-js">
-        <p id="myname" >Maurizio Minieri5</p>
+        <p id="myname" >Maurizio Minieri</p>
         <p id="student" class="cssanimation danceMiddle">Dottore in Informatica</p><br>
         <p  id="university" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
     </div>
