--- a/didattica.html
+++ b/didattica.html
@@ -74,12 +74,12 @@
     </script>
 
   <!--Questo comando visualizza la navbar ma RENDE LE VISTE DESKOP E CELLULARE UGUALI-->
-  <link rel="stylesheet" type="text/css" href="/static/2020/img/FILEdiARUBA/css/navbar1.css">
+  <link rel="stylesheet" type="text/css" href="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/css/navbar1.css">
   <!--QUESTO COMANDO RENDE LE VISTE DESKOP E CELLULARE UGUALI e insieme a quello di sopra fa visualizzare la navbar come si deve-->
-  <link rel="stylesheet" type="text/css" href="/static/2020/img/FILEdiARUBA/css/navbar2.css">
+  <link rel="stylesheet" type="text/css" href="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/css/navbar2.css">
 
     <!-- CSS bootstrap, rende i cerchi del carousel brutti-->
-   <link rel="stylesheet" type="text/css" href="/static/2020/img/FILEdiARUBA/css/bootstrap.css" >
+   <link rel="stylesheet" type="text/css" href="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/css/bootstrap.css" >
 
     <!-- JS Bootstrap, JQuery, PopperJS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -90,10 +90,10 @@
     <link rel="stylesheet" type="text/css" href="http://mauriziominieri.it/static/2020/img/FILEdiARUBA/css/index.css?ts=<?=time()?>&quot">
 
     <!-- CSS animation -->
-  <link rel="stylesheet" href="/static/2020/img/FILEdiARUBA/css/animation.css">
+  <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/css/animation.css">
 
   <!-- CSS hover -->
-  <link rel="stylesheet" href="/static/2020/img/FILEdiARUBA/css/hover.css">
+  <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/css/hover.css">
 
     <!-- ICONS -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -287,7 +287,7 @@
 
 
     <!--lo script crea la griglia di skills-->
-    <link rel="stylesheet" type="text/css" href="/static/2020/img/FILEdiARUBA/css/gridvisual.css">
+    <link rel="stylesheet" type="text/css" href="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/css/gridvisual.css">
 
 
     <!--lo script muove la navbar-->
@@ -409,7 +409,7 @@
 
 
    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-   <script src="/static/2020/img/FILEdiARUBA/particles.js"></script>
+   <script src="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/particles.js"></script>
 
     <!--FINE NAVBAR-->
 
