--- a/didattica.html
+++ b/didattica.html
@@ -398,7 +398,7 @@
 
 
     <div id="particles-js">
-        <p id="myname" >Maurizio Minieri</p>
+        <p id="myname" >Maurizio Minieri1</p>
         <p id="student" class="cssanimation danceMiddle">Dottore in Informatica</p><br>
         <p  id="university" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
     </div>
@@ -408,8 +408,11 @@
 
 
 
-   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-   <script src="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/particles.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+   <script src="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/particles.js"></script>-->
+
+   <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/particles.js"></script>
+   <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/demo/js/app.js"></script>
 
     <!--FINE NAVBAR-->
 
