--- a/didattica.html
+++ b/didattica.html
@@ -407,12 +407,13 @@
     </header>
 
 
-
+<!-- STELLE
    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <!-- <script src="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/particles.js"></script>-->
+   <script src="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/particles.js"></script>
+ -->
 
-   <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/particles.js"></script>
-   <!--<script src="file:///Users/mauriziominieri/Downloads/particles.js-master/demo/js/app.js"></script>-->
+ <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/particles.js"></script>
+ <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/demo/js/app.js"></script>
 
     <!--FINE NAVBAR-->
 
