--- a/didattica.html
+++ b/didattica.html
@@ -317,8 +317,8 @@
     data-transparent-skin='light' data-header-style='1' data-sticky-style='fixed' data-sticky-offset='header'
     id="mk-header-1" class="mk-header header-style-1 header-align-left  toolbar-false menu-hover-1 sticky-style-fixed
     full-header  transparent-header light-skin bg-true" role="banner" itemscope="itemscope" >
-    <div class="mk-header-holder">
-    <div class="mk-header-inner add-header-height">
+  <!--  <div class="mk-header-holder">
+   <div class="mk-header-inner add-header-height">
     <div class="mk-header-bg "></div>
     <div class="mk-header-nav-container one-row-style menu-hover-style-1" role="navigation" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement">
     <nav class="mk-main-navigation js-main-nav" id="principal-navbar"><ul id="menu-main" class="main-navigation-ul dropdownJavascript">
@@ -353,7 +353,7 @@
     </a>
 
 
-      <!-- hide auto-created selection field completely by hiding it's container -->
+
     <div id="google_translate_element" style="display:none"></div>
     <a style="margin-left:85px;" target="_blank" href="javascript:changeLanguageByButtonClick()">
     <img style="height:50%; " class="mk-desktop-logo dark-logo" src="http://mauriziominieri.it/static/2020/img/icons/icon-americaFlag.png" />
@@ -391,9 +391,9 @@
     <li id="navprogc-item-5" class="menu-item menu-item-type-post_type menu-item-object-page"><a class="menu-item-link js-smooth-scroll" href="#references" data-wpel-link="internal">Riferimenti</a></li>
     </ul></nav>
 
+  </div>
     </div>
-    </div>
-
+-->
 
 
 
@@ -408,12 +408,12 @@
 
 
 <!-- STELLE
-   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
    <script src="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/particles.js"></script>
+   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
  -->
 
- <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/particles.js"></script>
- <script src="file:///Users/mauriziominieri/Downloads/particles.js-master/demo/js/app.js"></script>
+ <script src="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/particles2.js"></script>
+ <script src="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/app.js"></script>
 
     <!--FINE NAVBAR-->
 
