--- a/didattica.html
+++ b/didattica.html
@@ -506,7 +506,7 @@
     >
               <span class="visually-hidden"> Android </span>
                   <svg class="icon--svg header-default__logo-icon" aria-hidden="true">
-        <use xlink:href="#android-logo"></use>
+        <use xlink:href="#maurizio-logo"></use>
       </svg>
 
             </a>
@@ -522,8 +522,8 @@
         <use xlink:href="#ico-arrow-large"></use>
       </svg></a>
 
-
-          </li><li class="header-default__primary-item header-default__item--active" style="--item-order: 2">
+                 <!--header-default__item--active         si mette come attributo della classe-->
+          </li><li class="header-default__primary-item" style="--item-order: 2">
 
 
         <a href="#slides"
@@ -537,7 +537,7 @@
           </li><li class="header-default__primary-item" style="--item-order: 3">
 
 
-        <a href="#verifiche"
+        <a href="#test"
         class="cta cta--is-3"
           data-g-config="{'eventLabel': 'phones & tablets', 'moduleName': 'header', 'linkUrl': '/phones-tablets/', 'eventCategory': 'navigation', 'title': 'menu item'}"
     >Verifiche<svg class="icon--svg cta__icon" aria-hidden="true">
@@ -548,10 +548,10 @@
           </li><li class="header-default__primary-item" style="--item-order: 4">
 
 
-        <a href="#classi"
+        <a href="#download"
         class="cta cta--is-3"
           data-g-config="{'eventLabel': 'enterprise', 'moduleName': 'header', 'linkUrl': '/enterprise/', 'eventCategory': 'navigation', 'title': 'menu item'}"
-    >Classi<svg class="icon--svg cta__icon" aria-hidden="true">
+    >Utili<svg class="icon--svg cta__icon" aria-hidden="true">
         <use xlink:href="#ico-arrow-large"></use>
       </svg></a>
 
@@ -562,11 +562,11 @@
             <form
         class="search-default js-search"
         data-android-component="search-default"
-        data-action="https://www.android.com/results/"
+        data-action="http://www.mauriziominieri.it/results/"
         id="search-default"
         method="get"
         style="--item-order: 5">
-        <label class="search-default__label" for="q">Search</label>
+        <label class="search-default__label" for="q">Cerca</label>
         <button
           type="button"
           class="search-default__open js-open"
@@ -627,21 +627,21 @@
             <ul class="header-default__primary"><li class="header-default__primary-item" style="--item-order: 1">
 
 
-        <a href="https://www.android.com/what-is-android/" style="color:black"
+        <a href="http://www.mauriziominieri.it" style="color:black"
         class="cta cta--is-3"
           data-g-config="{'eventLabel': 'what is android', 'moduleName': 'header', 'linkUrl': '/what-is-android/', 'eventCategory': 'navigation', 'title': 'menu item'}"
-    >What is Android<svg class="icon--svg cta__icon" aria-hidden="true">
+    >Sito Web<svg class="icon--svg cta__icon" aria-hidden="true">
         <use xlink:href="#ico-arrow-large"></use>
       </svg></a>
 
 
-    </li><li class="header-default__primary-item header-default__item--active" style="--item-order: 2; color:black">
+    </li><li class="header-default__primary-item" style="--item-order: 2; color:black">
 
 
-        <a href="https://www.android.com/android-10/" style="color:black"
+        <a href="#dispense" style="color:black"
         class="cta cta--is-3"
           data-g-config="{'eventLabel': 'android 10', 'moduleName': 'header', 'linkUrl': '/android-10/', 'eventCategory': 'navigation', 'title': 'menu item'}"
-    >Android 10<svg class="icon--svg cta__icon" aria-hidden="true">
+    >Dispense<svg class="icon--svg cta__icon" aria-hidden="true">
         <use xlink:href="#ico-arrow-large"></use>
       </svg></a>
 
@@ -649,10 +649,10 @@
           </li><li class="header-default__primary-item" style="--item-order: 3">
 
 
-        <a href="https://www.android.com/phones-tablets/" style="color:black"
+        <a href="#test" style="color:black"
         class="cta cta--is-3"
           data-g-config="{'eventLabel': 'phones & tablets', 'moduleName': 'header', 'linkUrl': '/phones-tablets/', 'eventCategory': 'navigation', 'title': 'menu item'}"
-    >Phones & Tablets<svg class="icon--svg cta__icon" aria-hidden="true">
+    >Verifiche<svg class="icon--svg cta__icon" aria-hidden="true">
         <use xlink:href="#ico-arrow-large"></use>
       </svg></a>
 
@@ -660,17 +660,19 @@
           </li><li class="header-default__primary-item" style="--item-order: 4">
 
 
-        <a href="https://www.android.com/enterprise/" style="color:black"
+        <a href="#download" style="color:black"
         class="cta cta--is-3"
           data-g-config="{'eventLabel': 'enterprise', 'moduleName': 'header', 'linkUrl': '/enterprise/', 'eventCategory': 'navigation', 'title': 'menu item'}"
-    >Enterprise<svg class="icon--svg cta__icon" aria-hidden="true">
+    >Utili<svg class="icon--svg cta__icon" aria-hidden="true">
         <use xlink:href="#ico-arrow-large"></use>
       </svg></a>
 
 
           </li></ul>
 
-          <ul class="header-default__secondary"><li class="header-default__secondary-item">
+          <!--<ul class="header-default__secondary">
+
+            <li class="header-default__secondary-item">
 
 
 
@@ -684,7 +686,10 @@
       </svg></a>
 
 
-              </li></ul>
+              </li>
+
+
+            </ul>-->
           <div class="header-default__language">
 
 
