--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     <meta content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per avere tutte le informazioni che desideri sapere." name="description">
     <meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport">
     <meta content="IE=11;IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="thumbnail" content="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/share/fox-peace.png" />
+    <meta name="thumbnail" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png" />
     <!--  <meta name="thumbnail" content="https://www.maurizio.com/static/2016/img/share/andy-peace.png" />-->
     <meta itemprop="name" content="MaurizioMinieri">
     <meta itemprop="description" content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per avere tutte le informazioni che desideri sapere.">
-    <meta itemprop="image" content="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/share/fox-lg.png">
+    <meta itemprop="image" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png">
     <!--<meta itemprop="image" content="https://www.maurizio.com/static/2016/img/share/andy-lg.png">-->
 
 
@@ -110,7 +110,7 @@
     <meta name="twitter:title" content="MaurizioMinieri">
     <meta name="twitter:description" content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per avere tutte le informazioni che desideri sapere.">
 
-    <meta name="twitter:image" content="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/share/fox-sm.png">
+    <meta name="twitter:image" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png">
     <!--<meta name="twitter:image" content="https://www.maurizio.com/static/2016/img/share/andy-sm.png">-->
     <meta name="twitter:url" content="index.html">
 
@@ -118,7 +118,7 @@
     <meta property="og:title" content="MaurizioMinieri">
     <meta property="og:description" content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per avere tutte le informazioni che desideri sapere.">
     <meta property="og:url" content="index.html">
-    <meta property="og:image" content="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/share/fox-lg.png">
+    <meta property="og:image" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png">
     <!--<meta property="og:image" content="https://www.maurizio.com/static/2016/img/share/andy-lg.png">-->
     <meta property="og:site_name" content="MaurizioMinieri">
     <meta property="og:locale" content="it_IT">
@@ -126,13 +126,13 @@
         {
           "@context": "http://schema.org",
           "@type": "Website",
-          "url": "file:///Users/mauriziominieri/websites/www.maurizio.com/intl/it_it/",
+          "url": "http://www.mauriziominieri.it",
           "publisher": {
             "@type": "Organization",
             "name": "Android",
             "logo": {
               "@type": "ImageObject",
-              "url": "file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/share/fox-peace.png",
+              "url": "http://www.mauriziominieri.it/static/2020/img/icons/logoM.png",
               "height": 103,
               "width": 100
             },
@@ -143,7 +143,7 @@
           "sameAs": [
             "https://www.instagram.com/doppia3mme/",
             //"https://www.youtube.com/user/GoogleMobile",
-            //"https://www.facebook.com/AndroidOfficial",
+            "https://www.facebook.com/maurizio.minieri"
             //"https://www.twitter.com/android",
             //"https://officialandroid.blogspot.com/"
           ]
