--- a/didattica.html
+++ b/didattica.html
@@ -260,7 +260,7 @@
     </style>
 
           <link rel="preload" href="https://www.android.com/static/css/android-10/v2/main.min.css" as="style">
-          <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/didattica.main.min.css" media="print" onload="this.media='all'">
+          <link rel="stylesheet" href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/css/didattica.main.min.css" media="print" onload="this.media='all'">
           <!--<noscript><link rel="stylesheet" href="https://www.android.com/static/css/android-10/v2/main.min.css"></noscript>-->
 
         <style>
@@ -724,9 +724,9 @@
     </header>
 
     <div id="particles-js">
-        <h1  style="position:absolute; color:white; margin-top:23%;">Maurizio Minieri</h1>
-        <h3 style="position:absolute; color:white; margin-top:26.5%;" class="cssanimation danceMiddle">Dottore in Informatica</h3><br>
-        <p  style="position:absolute; color:white; margin-top:29%;" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
+        <p  id="particles-name" style="position:absolute; color:white;">Maurizio Minieri</p>
+        <p id="particles-role" style="position:absolute; color:white;" class="cssanimation danceMiddle">Dottore in Informatica</p>
+        <p  id="particles-university" style="position:absolute; color:white;" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
     </div>
 
 
