--- a/didattica.html
+++ b/didattica.html
@@ -515,7 +515,7 @@
               <ul class="header-default__primary"><li class="header-default__primary-item" style="--item-order: 1">
 
 
-        <a href="http://www.mauriziominieri.it"
+        <a href="http://www.mauriziominieri.it" style="text-decoration:none"
         class="cta cta--is-3"
           data-g-config="{'eventLabel': 'what is android', 'moduleName': 'header', 'linkUrl': '/what-is-android/', 'eventCategory': 'navigation', 'title': 'menu item'}"
     >Sito Web<svg class="icon--svg cta__icon" aria-hidden="true">
@@ -526,7 +526,7 @@
           </li><li class="header-default__primary-item" style="--item-order: 2">
 
 
-        <a href="#slides"
+        <a href="#slides" style="text-decoration:none"
         class="cta cta--is-3"
           data-g-config="{'eventLabel': 'android 10', 'moduleName': 'header', 'linkUrl': '/android-10/', 'eventCategory': 'navigation', 'title': 'menu item'}"
     >Dispense<svg class="icon--svg cta__icon" aria-hidden="true">
@@ -537,7 +537,7 @@
           </li><li class="header-default__primary-item" style="--item-order: 3">
 
 
-        <a href="#test"
+        <a href="#test" style="text-decoration:none"
         class="cta cta--is-3"
           data-g-config="{'eventLabel': 'phones & tablets', 'moduleName': 'header', 'linkUrl': '/phones-tablets/', 'eventCategory': 'navigation', 'title': 'menu item'}"
     >Verifiche<svg class="icon--svg cta__icon" aria-hidden="true">
@@ -548,7 +548,7 @@
           </li><li class="header-default__primary-item" style="--item-order: 4">
 
 
-        <a href="#download"
+        <a href="#download" style="text-decoration:none"
         class="cta cta--is-3"
           data-g-config="{'eventLabel': 'enterprise', 'moduleName': 'header', 'linkUrl': '/enterprise/', 'eventCategory': 'navigation', 'title': 'menu item'}"
     >Utili<svg class="icon--svg cta__icon" aria-hidden="true">
@@ -2758,6 +2758,36 @@ function changeLanguageByButtonClick() {
       <path fill="white" d="M59.3 56.4c12.4 0 22.7 6.4 27.6 13.3V58.1h18.9v86.1H92.2c-3 0-5.4-2.4-5.4-5.4v-6.2c-4.8 7-15.1 13.4-27.5 13.4-23.6 0-41.5-20.2-41.5-44.8s17.9-44.8 41.5-44.8m3.4 17.2C47.4 73.6 37 85.7 37 101.2s10.3 27.6 25.7 27.6c15.3 0 25.7-12.1 25.7-27.6S78.1 73.6 62.7 73.6M127.3 58.1h19v11.7c5.2-8.6 15-13.4 26.2-13.4 20 0 32.9 14.1 32.9 36v51.8h-13.6c-3 0-5.4-2.4-5.4-5.4V95.5c0-13.6-6.9-21.9-17.9-21.9-12.6 0-22.2 9.8-22.2 28.2v42.4h-13.6c-3 0-5.4-2.4-5.4-5.4V58.1zM261.9 56.4c12.4 0 22.7 6.4 27.6 13.3V15.1h18.9v129.2h-13.6c-3 0-5.4-2.4-5.4-5.4v-6.2c-4.8 6.9-15.2 13.3-27.6 13.3-23.6 0-41.5-20.2-41.5-44.8.1-24.6 18-44.8 41.6-44.8m3.4 17.2c-15.3 0-25.7 12.1-25.7 27.6s10.3 27.6 25.7 27.6c15.3 0 25.7-12.1 25.7-27.6s-10.4-27.6-25.7-27.6M329.9 58.1h18.9v15.3c3.3-9.8 12.9-16.2 22.7-16.2 2.4 0 4.8.2 7.4.7v19.5c-3.3-1-6-1.6-9.5-1.6-10.9 0-20.7 9.1-20.7 26.4v42h-13.6c-3 0-5.4-2.4-5.4-5.4V58.1zM430.1 146c-25.5 0-45.1-19.8-45.1-44.8s19.6-44.8 45.1-44.8 45.1 19.8 45.1 44.8-19.6 44.8-45.1 44.8m0-17.6c15.2 0 25.8-11.9 25.8-27.2S445.2 74 430.1 74c-15.3 0-26 11.9-26 27.2s10.7 27.2 26 27.2M500 39.3c-6.9 0-12.7-5.7-12.7-12.7 0-6.9 5.9-12.6 12.7-12.6 7.1 0 12.6 5.7 12.6 12.6 0 7.1-5.5 12.7-12.6 12.7m-9.4 18.8h18.9v86.1H496c-3 0-5.4-2.4-5.4-5.4V58.1zM566.6 56.4c12.4 0 22.7 6.4 27.6 13.3V15.1h18.9v129.2h-13.6c-3 0-5.4-2.4-5.4-5.4v-6.2c-4.8 6.9-15.2 13.3-27.6 13.3-23.6 0-41.5-20.2-41.5-44.8.1-24.6 18-44.8 41.6-44.8m3.5 17.2c-15.3 0-25.7 12.1-25.7 27.6s10.3 27.6 25.7 27.6c15.3 0 25.7-12.1 25.7-27.6s-10.4-27.6-25.7-27.6"/>
       <path class="logo-android__andy-icon" d="m822.2 111.7c-5.3 0-9.6-4.3-9.6-9.6s4.3-9.6 9.6-9.6 9.6 4.3 9.6 9.6-4.3 9.6-9.6 9.6m-105.7 0c-5.3 0-9.6-4.3-9.6-9.6s4.3-9.6 9.6-9.6 9.6 4.3 9.6 9.6-4.3 9.6-9.6 9.6m109.1-57.6l19.2-33.1c1.1-1.9 0.4-4.3-1.5-5.4s-4.3-0.4-5.4 1.5l-19.4 33.5c-14.8-6.8-31.4-10.6-49.1-10.6s-34.4 3.8-49.2 10.5l-19.4-33.5c-1.1-1.9-3.5-2.6-5.4-1.5s-2.6 3.5-1.5 5.4l19.1 33.1c-32.8 17.9-55.3 51.1-58.6 90.4h229.7c-3.2-39.2-25.6-72.4-58.5-90.3"/>
     </symbol>
+
+
+
+    <symbol id="maurizio-logo" class="logo-android__logo-icon" viewBox="0 0 898 160">
+    <g transform="translate(-1,0) scale(0.4,-0.45)">
+    <!--m-->  <path fill="white"   d="M59 -70 c-12 -16 -45 -206 -40 -239 1 -13 10 -24 18 -24 11 0 18 23 29 88 7 48 16 85 20 82 3 -4 15 -30 26 -58 27 -66 50 -72 71 -20 9 21 21 49 27 63 9 22 12 15 24 -60 15 -90 25 -112 45 -92 9 9 7 40 -9 133 -12 67 -26 126 -32 132 -16 16 -36 -6 -56 -61 -26 -69 -32 -71 -55 -16 -34 83 -47 97 -68 72z"></path>
+    <!--a-->  <path fill="white"   d="M370 -130 c-21 -8 -42 -60 -42 -103 0 -30 6 -47 25 -66 22 -22 31 -24 92 -21 l68 4 0 94 0 94 -65 2 c-36 1 -71 -1 -78 -4z m86 -45 c16 -16 16 -80 0 -96 -31 -31 -88 3 -88 52 0 43 59 73 88 44z"></path>
+    <!--u-->  <path fill="white"   d="M550 -190 c3 -64 7 -80 28 -102 33 -35 84 -32 114 8 28 38 31 160 4 165 -15 3 -18 -4 -18 -35 0 -21 -5 -55 -11 -75 -8 -30 -15 -38 -34 -38 -31 0 -37 11 -44 84 -5 49 -10 61 -25 64 -17 4 -18 -2 -14 -71z"></path>
+    <!--r-->  <path fill="white"   d="M780 -130 c-12 -19 -17 -123 -8 -159 16 -59 37 -44 43 30 5 62 6 66 40 82 46 24 45 43 -2 43 -20 0 -40 3 -44 8 -10 10 -22 9 -29 -4z"></path>
+    <!--i-->  <path fill="white"   d="M950 -140 c-11 -44 -6 -144 8 -164 26 -34 37 -5 34 92 -2 72 -6 89 -19 92 -10 2 -19 -6 -23 -20z"></path>
+    <!--z-->  <path fill="white"   d="M1050 -130 c-11 -18 5 -30 41 -30 19 0 34 -3 34 -8 0 -4 -18 -32 -40 -61 -57 -76 -52 -86 40 -86 63 0 75 3 78 18 3 13 -3 17 -25 18 -15 0 -36 4 -46 8 -17 6 -15 11 18 50 44 54 58 78 50 91 -8 13 -142 13 -150 0z"></path>
+    <!--i-->  <path fill="white"   d="M1250 -150 c-18 -90 6 -201 34 -159 11 16 14 148 4 174 -10 27 -31 18 -38 -15z"></path>
+    <!--o-->  <path fill="white"   d="M1400 -140 c-40 -22 -58 -72 -44 -123 20 -70 106 -89 160 -36 39 40 41 109 4 146 -27 27 -84 33 -120 13z m95 -60 c13 -25 13 -31 0 -55 -19 -34 -55 -41 -81 -17 -25 22 -24 59 2 85 26 26 59 21 79 -13z"></path>
+    </g>
+    <g transform="translate(-1,0) scale(0.03,-0.03)" fill="#000000" stroke="none">
+      <path fill="#FF7733" class="logo-maurizio" d="M23000 -130 c-17 -8 -39 -26 -48 -40 -17 -25 -16 -30 9 -109 15 -48 43 -109 66 -143 26 -38 51 -95 71 -159 19 -60 47 -125 72 -163 25 -40 51 -99 68
+      -158 24 -84 39 -116 102 -214 24 -38 47 -165 47 -259 0 -163 -32 -350 -90 -521 -16 -47 -36 -137 -45 -200 -9 -63 -22 -160 -30 -215 -7 -56 -32 -154 -54 -220 -25 -77 -45 -163 -56 -240 -33 -245 -45 -312 -70 -395 -52 -173 -66 -239
+      -86 -395 -22 -176 -36 -240 -73 -331 -28 -69 -51 -183 -66 -334 -14 -140 -26 -197 -65 -310 -18 -52 -40 -129 -50 -171 -21 -90 -12 -123 45 -152 32 -16 73 -17 530 -15 l495 3 50 25 c28 14 57 38 67 55 10 18 25 93 38 185 29 218 36
+      250 81 382 27 81 46 161 59 255 32 226 39 263 80 383 44 132 54 176 75 354 10 78 26 157 42 200 14 39 32 89 40 110 13 36 23 91 69 385 8 51 33 148 55 215 28 85 46 163 60 261 26 191 46 284 79 376 16 42 36 112 45 154 20 96 36 129
+      72 144 21 8 145 11 450 9 l421 -3 26 -24 c20 -19 26 -34 26 -67 0 -56 -22 -149 -59 -250 -32 -88 -51 -185 -76 -389 -16 -130 -29 -190 -79 -360 -15 -51 -37 -173 -51 -283 -26 -202 -42 -287 -75 -387 -29 -88 -57 -234 -69 -365 -14
+      -142 -44 -290 -76 -375 -28 -74 -46 -168 -70 -370 -11 -93 -30 -183 -55 -267 -66 -217 -74 -261 -59 -294 8 -16 30 -37 49 -47 32 -16 73 -17 512 -15 566 3 520 -7 554 130 12 48 38 133 58 191 20 58 42 147 50 199 8 51 22 138 30 193
+      10 64 30 137 55 201 24 59 47 140 56 195 38 233 49 280 86 372 25 62 45 135 55 195 36 235 46 275 83 360 38 87 54 147 66 252 14 118 47 253 81 331 29 67 40 110 60 252 28 193 34 222 74 323 16 39 36 108 44 153 17 90 34 122 72 139
+      17 8 109 12 282 12 264 0 398 -9 445 -31 36 -16 137 -144 155 -194 18 -52 9 -120 -30 -238 -16 -50 -38 -152 -49 -227 -29 -199 -47 -282 -86 -389 -26 -71 -41 -141 -59 -271 -19 -130 -35 -204 -64 -290 -45 -132 -61 -205 -85 -380 -12
+      -91 -30 -164 -66 -271 -40 -120 -52 -175 -69 -305 -21 -165 -39 -243 -70 -304 -33 -65 -55 -177 -97 -500 -6 -43 20 -74 74 -89 24 -7 215 -11 517 -11 571 0 533 -7 609 118 58 95 61 106 87 303 21 158 37 225 83 354 16 43 36 140 51 248
+      27 186 41 251 77 352 31 89 57 215 74 371 11 96 26 165 46 224 55 158 67 208 89 380 21 169 37 238 79 353 40 109 55 242 54 492 0 263 -13 345 -68 455 -18 36 -43 99 -55 140 -28 93 -42 121 -84 168 -18 20 -49 67 -70 104 -20 37 -60
+      92 -89 122 -29 30 -70 74 -93 98 -74 80 -185 168 -252 202 -37 19 -76 44 -87 56 -34 37 -96 68 -175 86 -41 9 -111 34 -155 55 -161 78 3 73 -2545 76 -1918 2 -2270 0 -2297 -11z"></path>
+    </g>
+    </symbol>
+
+
   </svg>
 
     <script src="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/particles2.js"></script>
