--- a/didattica.html
+++ b/didattica.html
@@ -260,7 +260,7 @@
     </style>
 
           <link rel="preload" href="https://www.android.com/static/css/android-10/v2/main.min.css" as="style">
-          <link rel="stylesheet" href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/css/didattica.main.min.css" media="print" onload="this.media='all'">
+          <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/didattica.main.min.css" media="print" onload="this.media='all'">
           <!--<noscript><link rel="stylesheet" href="https://www.android.com/static/css/android-10/v2/main.min.css"></noscript>-->
 
         <style>
